add_library(examples_parameters parameters.cpp )

add_executable(caller caller.cpp )
add_executable(callee callee.cpp )
add_executable(provide_prefix callee.cpp )
add_executable(publisher publisher.cpp )
add_executable(subscriber subscriber.cpp )
add_executable(wampcra wampcra.cpp )
add_executable(uds uds.cpp )
add_executable(websocket_callee websocket_callee.cpp )

target_link_libraries(caller examples_parameters autobahn-cpp::autobahn-cpp)
target_link_libraries(callee examples_parameters autobahn-cpp::autobahn-cpp)
target_link_libraries(provide_prefix examples_parameters autobahn-cpp::autobahn-cpp)
target_link_libraries(publisher examples_parameters autobahn-cpp::autobahn-cpp)
target_link_libraries(subscriber examples_parameters autobahn-cpp::autobahn-cpp)
target_link_libraries(wampcra examples_parameters ${OPENSSL_LIBRARIES} autobahn-cpp::autobahn-cpp)
target_link_libraries(uds examples_parameters autobahn-cpp::autobahn-cpp)
target_link_libraries(websocket_callee examples_parameters autobahn-cpp::autobahn-cpp)
